fix: pre overflow issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -208,3 +208,9 @@ details summary > * {
   border-left: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
 }
+
+
+pre,
+pre.sourceCode {
+  overflow: auto;
+}
